--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <div class="is-vcentered" id="drop_zone" ondrop="dropHandler(event);" ondragover="event.preventDefault()"
     onclick="audioClicked(event)">
     <div id="waveform"></div>
-    <br /><br />
+    <p id='seconds'>Time: 0.000</p>
+
   </div>
 </body>
 
