testing autoupdate dialog

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Matamata Desktop Autoupdate Test</title>
+  <title>Matamata Desktop Autoupdate Test 2</title>
   <link rel="stylesheet" href="main.css" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
