--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Matamata Desktop</title>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="audioBox.css" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bulma-extensions@6.2.7/bulma-slider/dist/js/bulma-slider.min.js"
@@ -19,15 +19,17 @@
 
 
 <body>
-  <div class="is-vcentered" id="drop_zone" ondrop="dropHandler(event);" ondragover="event.preventDefault()"
-    onclick="audioClicked(event)">
-    <div id="waveform">
+  <div class="is-vcentered" id="drop_zone" ondrop="console.log('drag');dropHandler(event);"
+    ondragover="event.preventDefault()" onclick="audioClicked(event)">
+    <div id='dragHelpText-container'>
       <p class="dragHelpText" id="dragHelpText">Drag your audio here</p>
     </div>
+    <div id="waveform"> </div>
   </div>
 
-  <div class="columns">
 
+  <br />
+  <div class="columns">
     <div class="column">
       <p id='seconds'>Time: 0.000</p>
     </div>
@@ -38,6 +40,7 @@
     </div>
   </div>
 
+  <br />
   <div class="columns">
     <div class="button" style="margin-left: 2.1vw;" onclick="saveTimestamps()">Save</div>
   </div>
