--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Matamata Desktop</title>
+  <link rel="stylesheet" href="../styles/main.css" />
   <link rel="stylesheet" href="audioBox.css" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
