--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -1,12 +1,11 @@
 <head>
-  <link rel="stylesheet" href="main.css" />
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
+  <link rel="stylesheet" href="cc.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
     integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ=="
-    crossorigin="anonymous"
-  ></script>
-  <script src="build/main.js"></script>
+    crossorigin="anonymous"></script>
+  <script src="cc.js"></script>
 </head>
+
 <body>
   <p class="drop" id="dropzone">
     Drag your json (optional) and pose-image files here.
