--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -1,8 +1,8 @@
 <head>
+  <link rel="stylesheet" href="../styles/bulma.min.css">
+  <script src="../styles//bulma-slider.min.js"></script>
   <link rel="stylesheet" href="cc.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
-    integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ=="
-    crossorigin="anonymous"></script>
+  <script src="p5.min.js"></script>
   <script src="cc.js"></script>
 </head>
 
