--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -5,9 +5,8 @@
   <link rel="stylesheet" href="../styles/main.css" />
   <link rel="stylesheet" href="audioBox.css" />
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bulma-extensions@6.2.7/bulma-slider/dist/js/bulma-slider.min.js"
-    integrity="sha256-xyHFiCAhPIEcTS8BdzL/tYRVisN6wMFlFYEYwgtBKW0=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../styles/bulma.min.css">
+  <script src="../styles//bulma-slider.min.js"></script>
 
   <script>
     var exports = {};
