added menu buttons

--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -1,6 +1,8 @@
 <head>
   <link rel="stylesheet" href="../styles/bulma.min.css">
-  <script src="../styles//bulma-slider.min.js"></script>
+  <script src="../styles/bulma-slider.min.js"></script>
+  <link rel="stylesheet" href="../styles/main.css">
+
   <link rel="stylesheet" href="cc.css" />
   <script src="p5.min.js"></script>
   <script src="cc.js"></script>
