menu buttons are links

--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -10,10 +10,15 @@
 <body>
     <div class='columns'>
         <div class='column has-text-centered'>
-            <div class='button'>Character Configuration</div>
+            <a href='../character-creator/cc.html'>
+                <div class='button'>Character Configuration</div>
+            </a>
         </div>
         <div class='column has-text-centered'>
-            <div class='button'>Timestamps Creator</div>
+            <a href='../timestamps/timestamps.html'>
+
+                <div class='button'>Timestamps Creator</div>
+            </a>
         </div>
     </div>
 </body>
