--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -8,17 +8,26 @@
 </head>
 
 <body>
+    <div class='has-text-centered'>
+        <h1><b>Matamata</b> Desktop</h1>
+    </div>
+    <div class='has-text-centered'>
+    </div>
     <div class='columns'>
-        <div class='column has-text-centered'>
+        <div class="column is-one-fifth">
+        </div>
+        <div class='column has-text-centered '>
             <a href='../character-creator/cc.html'>
-                <div class='button'>Character Configuration</div>
+                <div class='button '>Character Configuration</div>
             </a>
         </div>
-        <div class='column has-text-centered'>
+        <div class='column has-text-centered '>
             <a href='../timestamps/timestamps.html'>
 
                 <div class='button'>Timestamps Creator</div>
             </a>
+        </div>
+        <div class="column is-one-fifth">
         </div>
     </div>
 </body>
