fixed page titles

--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Matamata Desktop</title>
+  <title>Matamata Desktop - Timestamps Creator</title>
   <link rel="stylesheet" href="../styles/main.css" />
   <link rel="stylesheet" href="audioBox.css" />
 
