--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -1,4 +1,6 @@
 <head>
+  <title>Matamata Desktop - Character Configuration</title>
+
   <link rel="stylesheet" href="../styles/bulma.min.css">
   <script src="../styles/bulma-slider.min.js"></script>
   <link rel="stylesheet" href="../styles/main.css">
