--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -1,4 +1,6 @@
 <head>
+    <title>Matamata Desktop</title>
+
     <link rel="stylesheet" href="../styles/bulma.min.css">
     <script src="../styles/bulma-slider.min.js"></script>
     <link rel="stylesheet" href="../styles/main.css">
