added video render button to menu

--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -29,6 +29,12 @@
                 <div class='button'>Timestamps Creator</div>
             </a>
         </div>
+        <div class='column has-text-centered '>
+            <a href='../render/render.html'>
+
+                <div class='button'>Video Render</div>
+            </a>
+        </div>
         <div class="column is-one-fifth">
         </div>
     </div>
