--- a/src/render/render.html
+++ b/src/render/render.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class='columns is-flex-direction-column' id='settings'>
-        <div class='column'>
+        <!-- <div class='column'>
             <button class="button" onclick="uploadPath('corePath', {properties: ['openDirectory']})">Find Matamata-Core
                 Folder</button>
-        </div>
+        </div> -->
         <div class='column'>
             <button class="button" onclick="uploadPath('audioPath')">Find Audio</button>
         </div>
