Copies core files on build, generates basic command

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -20,7 +20,7 @@
             <button class="button" onclick="uploadPath('audioPath')">Find Audio</button>
         </div>
         <div class='column'>
-            <button class="button" onclick="uploadPath('charactersPath')">Find Characters (optional)</button>
+            <button class="button" onclick="uploadPath('characterPath')">Find Characters (optional)</button>
         </div>
         <div class='column'>
             <button class="button" onclick="uploadPath('timestampPath')">Find Timestamps (optional)</button>
