choose save location

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -20,6 +20,9 @@
             <button class="button" onclick="uploadPath('audioPath')">Find Audio</button>
         </div>
         <div class='column'>
+            <button class="button" onclick="savePath('outputPath')">outputFile</button>
+        </div>
+        <div class='column'>
             <button class="button" onclick="uploadPath('characterPath')">Find Characters (optional)</button>
         </div>
         <div class='column'>
