migrated from snap to appimage because of snap sandboxing perms

--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -32,7 +32,7 @@
         <div class='column has-text-centered '>
             <a href='../render/render.html'>
 
-                <div class='button'>Video Render</div>
+                <div class='button'>Video Render (Beta, Linux Only)</div>
             </a>
         </div>
         <div class="column is-one-fifth">
