replaced cc alerts with sweetalert

--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -1,6 +1,6 @@
 <head>
   <title>Matamata Desktop - Character Configuration</title>
-
+  <script>exports = {}</script>
   <link rel="stylesheet" href="../styles/bulma.min.css">
   <script src="../styles/bulma-slider.min.js"></script>
   <link rel="stylesheet" href="../styles/main.css">
