fixed tc loading large audio crash

--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -19,8 +19,8 @@
 
 
 <body>
-  <div class="is-vcentered" id="drop_zone" ondrop="console.log('drag');dropHandler(event);"
-    ondragover="event.preventDefault()" onclick="audioClicked(event)">
+  <div class="is-vcentered" id="drop_zone" ondrop="dropHandler(event);" ondragover="event.preventDefault()"
+    onclick="audioClicked(event)">
     <div id='dragHelpText-container'>
       <p class="dragHelpText" id="dragHelpText">Drag your audio here</p>
     </div>
