generates proper command

--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -1,9 +1,11 @@
 <head>
   <title>Matamata Desktop - Character Configuration</title>
-  <script>exports = {}</script>
-  <link rel="stylesheet" href="../styles/bulma.min.css">
+  <script>
+    exports = {};
+  </script>
+  <link rel="stylesheet" href="../styles/bulma.min.css" />
   <script src="../styles/bulma-slider.min.js"></script>
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/main.css" />
 
   <link rel="stylesheet" href="cc.css" />
   <script src="p5.min.js"></script>
