--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -1,39 +1,33 @@
 <head>
-    <title>Matamata Desktop</title>
+  <title>Matamata Desktop</title>
 
-    <link rel="stylesheet" href="../styles/bulma.min.css">
-    <script src="../styles/bulma-slider.min.js"></script>
-    <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/bulma.min.css" />
+  <script src="../styles/bulma-slider.min.js"></script>
+  <link rel="stylesheet" href="../styles/main.css" />
 
-    <link rel="stylesheet" href="menu.css" />
-
+  <link rel="stylesheet" href="menu.css" />
 </head>
 
 <body>
-    <div class='has-text-centered'>
-        <h1><b>Matamata</b> Desktop</h1>
+  <div class="has-text-centered">
+    <h1><b>Matamata</b> Desktop</h1>
+  </div>
+  <div class="has-text-centered"></div>
+  <div class="columns">
+    <div class="column has-text-centered">
+      <a href="../character-creator/cc.html">
+        <div class="button">Character Configuration</div>
+      </a>
     </div>
-    <div class='has-text-centered'>
+    <div class="column has-text-centered">
+      <a href="../timestamps/timestamps.html">
+        <div class="button">Timestamps Creator</div>
+      </a>
     </div>
-    <div class='columns'>
-
-        <div class='column has-text-centered '>
-            <a href='../character-creator/cc.html'>
-                <div class='button '>Character Configuration</div>
-            </a>
-        </div>
-        <div class='column has-text-centered '>
-            <a href='../timestamps/timestamps.html'>
-
-                <div class='button'>Timestamps Creator</div>
-            </a>
-        </div>
-        <div class='column has-text-centered '>
-            <a href='../render/render.html'>
-
-                <div class='button'>Video Render (Beta, Linux Only)</div>
-            </a>
-        </div>
-
+    <div class="column has-text-centered">
+      <a href="../render/render.html">
+        <div class="button">Video Render (Beta, Linux Only)</div>
+      </a>
     </div>
+  </div>
 </body>
