--- a/src/render/render.html
+++ b/src/render/render.html
@@ -1,32 +1,41 @@
 <head>
-    <title>Matamata Desktop</title>
-    <script>exports = {}</script>
-    <link rel="stylesheet" href="../styles/bulma.min.css">
-    <script src="../styles/bulma-slider.min.js"></script>
-    <link rel="stylesheet" href="../styles/main.css">
+  <title>Matamata Desktop</title>
+  <script>
+    exports = {};
+  </script>
+  <link rel="stylesheet" href="../styles/bulma.min.css" />
+  <script src="../styles/bulma-slider.min.js"></script>
+  <link rel="stylesheet" href="../styles/main.css" />
 
-    <link rel="stylesheet" href="render.css" />
-    <script defer src="render.js"></script>
-
+  <link rel="stylesheet" href="render.css" />
+  <script defer src="render.js"></script>
 </head>
 
 <body>
-    <div class='columns is-flex-direction-column' id='settings'>
-        <!-- <div class='column'>
+  <div class="columns is-flex-direction-column" id="settings">
+    <!-- <div class='column'>
             <button class="button" onclick="uploadPath('corePath', {properties: ['openDirectory']})">Find Matamata-Core
                 Folder</button>
         </div> -->
-        <div class='column'>
-            <button class="button" onclick="uploadPath('audioPath')">Find Audio</button>
-        </div>
-        <div class='column'>
-            <button class="button" onclick="savePath('outputPath')">outputFile</button>
-        </div>
-        <div class='column'>
-            <button class="button" onclick="uploadPath('characterPath')">Find Characters (optional)</button>
-        </div>
-        <div class='column'>
-            <button class="button" onclick="uploadPath('timestampPath')">Find Timestamps (optional)</button>
-        </div>
+    <div class="column">
+      <button class="button" onclick="uploadPath('audioPath')">
+        Find Audio
+      </button>
     </div>
+    <div class="column">
+      <button class="button" onclick="savePath('outputPath')">
+        outputFile
+      </button>
+    </div>
+    <div class="column">
+      <button class="button" onclick="uploadPath('characterPath')">
+        Find Characters (optional)
+      </button>
+    </div>
+    <div class="column">
+      <button class="button" onclick="uploadPath('timestampPath')">
+        Find Timestamps (optional)
+      </button>
+    </div>
+  </div>
 </body>
