working on win again

--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -26,8 +26,8 @@
     </div>
     <div class="column has-text-centered">
       <a href="../render/render.html">
-        <div class="button">Video Render (Beta, Linux Only)</div>
-      </a>
+        <div class="button">Video Render</div>
+      </a> 
     </div>
   </div>
 </body>
