--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -24,18 +24,18 @@
       <form id="form" action="javascript:void(0);" onsubmit="addPose()">
         <b>Pose Settings:</b><br />
         Pose Name:
-        <input type="text" name="pose_name" value="Talking_1" /><br />
+        <input class="input" type="text" name="pose_name" value="Talking_1" /><br />
         <input type="checkbox" id="facingLeft" name="facingLeft" />
         <label for="facingLeft"> Facing Left?</label><br />
         <br />
         <b>JSON Settings:</b><br />
         Faces Folder:
-        <input type="text" name="facesFolder" value="SampleFace/" /><br />
+        <input class="input" type="text" name="facesFolder" value="SampleFace/" /><br />
 
         <br />
         <b>Advanced Settings:</b><br />
         Default Mouth:
-        <input type="text" name="closed_mouth" value="" /><br />
+        <input class="input" type="text" name="closed_mouth" value="" /><br />
 
         <input type="submit" value="Add Pose" />
       </form>
