--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -15,6 +15,11 @@
   <div class="has-text-centered"></div>
   <div class="columns">
     <div class="column has-text-centered">
+      <a href="../autoinstall/autoinstall.html">
+        <div class="button">Install Dependencies (Linux Only)</div>
+      </a>
+    </div>
+    <div class="column has-text-centered">
       <a href="../character-creator/cc.html">
         <div class="button">Character Configuration</div>
       </a>
@@ -27,7 +32,7 @@
     <div class="column has-text-centered">
       <a href="../render/render.html">
         <div class="button">Video Render</div>
-      </a> 
+      </a>
     </div>
   </div>
 </body>
