--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -6,19 +6,13 @@
   <link rel="stylesheet" href="../styles/main.css" />
 
   <link rel="stylesheet" href="autoinstall.css" />
-  <script defer src="autoinstall.js"></script>
+  <script defer src="windows.js"></script>
 </head>
-
 <body>
-  <div class="columns">
-    <div class="column has-text-centered">
-      <p id='commandText'>COMMAND TEXT HERE</p>
+  <div class="columns is-vcentered"> 
+    <div class="column  has-text-centered">
+      <div class="button">MAYBE</div> <br />
+      <div class='button'>reeee</div>
     </div>
-  </div>
-  <div class="columns">
-    <div class="column has-text-centered">
-      <div class="button" onclick="install()">Install</div>
-    </div>
-  </div>
   </div>
 </body>
