--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -15,8 +15,8 @@
   <div class="has-text-centered"></div>
   <div class="columns">
     <div class="column has-text-centered">
-      <a href="../autoinstall/autoinstall.html">
-        <div class="button">Install Dependencies (Linux Only)</div>
+      <a href="../autoinstall/decider.html">
+        <div class="button">Install Requirements</div>
       </a>
     </div>
     <div class="column has-text-centered">
