--- a/src/autoinstall/decider.html
+++ b/src/autoinstall/decider.html
@@ -1,6 +1,8 @@
 <head>
   <title>Matamata Desktop</title>
-  <script>exports = {}</script>
+  <script>
+    exports = {};
+  </script>
   <link rel="stylesheet" href="../styles/bulma.min.css" />
   <script src="../styles/bulma-slider.min.js"></script>
   <link rel="stylesheet" href="../styles/main.css" />
@@ -9,6 +11,4 @@
   <script defer src="decider.js"></script>
 </head>
 
-<body>
-
-</body>
+<body></body>
