--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -1,6 +1,8 @@
 <head>
   <title>Matamata Desktop</title>
-  <script>exports = {}</script>
+  <script>
+    exports = {};
+  </script>
   <link rel="stylesheet" href="../styles/bulma.min.css" />
   <script src="../styles/bulma-slider.min.js"></script>
   <link rel="stylesheet" href="../styles/main.css" />
@@ -9,10 +11,35 @@
   <script defer src="windows.js"></script>
 </head>
 <body>
-  <div class="columns is-vcentered"> 
-    <div class="column  has-text-centered">
-      <div class="button">MAYBE</div> <br />
-      <div class='button'>reeee</div>
+  <div class="columns is-vcentered">
+    <div class="column has-text-centered">
+      <p>Go down the list of buttons, wait for a success before continuing.</p>
+      <p>---- Python ----</p>
+      <div class="button" onclick="uninstallPython()">Uninstall Old Python</div>
+      <br />
+      <div class="button" onclick="installPython()">Install Python</div>
+      <br />
+      <div class="button" onclick="installPackages()">
+        Install Required Packages
+      </div>
+      <br />
+      <p>---- WSL ----</p>
+      <div class="button" onclick="enableWSL()">Enable WSL</div>
+      <br />
+      <div class="button" onclick="installKernal()">Install WSL Kernal</div>
+      <br />
+      <div class="button" onclick="setWSL2()">WSL Mode 2</div>
+      <br />
+      <p>---- Docker ----</p>
+      <div class="button" onclick="installDocker()">
+        Install Docker (Can take a while)
+      </div>
+      <br />
+      <div class="button" onclick="dockerPull()">Pull Gentle</div>
+      <br />
+
+      <br />
+      <br />
     </div>
   </div>
 </body>
