--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -37,8 +37,10 @@
       <br />
       <div class="button" onclick="dockerPull()">Pull Gentle</div>
       <br />
+      <p>---- FFmpeg ----</p>
+      <div class="button" onclick="rmFFmpeg()">Delete Old FFmpeg</div><br />
+      <div class="button" onclick="downloadFFmpeg()">Download FFmpeg</div><br />
 
-      <br />
       <br />
     </div>
   </div>
