can do everything except add ffmpeg to path, prompts for everything else

--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -38,8 +38,12 @@
       <div class="button" onclick="dockerPull()">Pull Gentle</div>
       <br />
       <p>---- FFmpeg ----</p>
-      <div class="button" onclick="rmFFmpeg()">Delete Old FFmpeg</div><br />
-      <div class="button" onclick="downloadFFmpeg()">Download FFmpeg</div><br />
+      <div class="button" onclick="rmFFmpeg()">Delete Old FFmpeg</div>
+      <br />
+      <div class="button" onclick="downloadFFmpeg()">Download FFmpeg</div>
+      <br />
+      <div class="button" onclick="pathFFmpeg()">Add FFmpeg to Path</div>
+      <br />
 
       <br />
     </div>
