--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -26,6 +26,7 @@
       <p>---- WSL ----</p>
       <div class="button" onclick="enableWSL()">Enable WSL</div>
       <br />
+      <p> Restart/Update your computer</p>
       <div class="button" onclick="installKernal()">Install WSL Kernal</div>
       <br />
       <div class="button" onclick="setWSL2()">WSL Mode 2</div>
@@ -35,6 +36,7 @@
         Install Docker (Can take a while)
       </div>
       <br />
+      <p> Restart your computer</p>
       <div class="button" onclick="dockerPull()">Pull Gentle</div>
       <br />
       <p>---- FFmpeg ----</p>
