node-powershell; elevated perms required

--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -19,6 +19,7 @@
       <br />
       <div class="button" onclick="installPython()">Install Python</div>
       <br />
+      <p>Restart this app</p>
       <div class="button" onclick="installPackages()">
         Install Required Packages
       </div>
