success on wsl2

--- a/src/autoinstall/linux.html
+++ b/src/autoinstall/linux.html
@@ -1,6 +1,8 @@
 <head>
   <title>Matamata Desktop</title>
-  <script>exports = {}</script>
+  <script>
+    exports = {};
+  </script>
   <link rel="stylesheet" href="../styles/bulma.min.css" />
   <script src="../styles/bulma-slider.min.js"></script>
   <link rel="stylesheet" href="../styles/main.css" />
@@ -12,7 +14,7 @@
 <body>
   <div class="columns">
     <div class="column has-text-centered">
-      <p id='commandText'>COMMAND TEXT HERE</p>
+      <p id="commandText">COMMAND TEXT HERE</p>
     </div>
   </div>
   <div class="columns">
