fixed runner linux

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -44,7 +44,7 @@
 
 
 
-    <p id="advanced-dropdown-controller">Advanced ▶</p>
+    <div id="advanced-dropdown-controller" style="width: 100px">Advanced ▶</div>
     <div id="advanced-dropdown">
       <input type="text" id="extras">
     </div>
