--- a/src/render/render.html
+++ b/src/render/render.html
@@ -42,11 +42,11 @@
       </div>
     </div>
 
-
-
     <div id="advanced-dropdown-controller" style="width: 100px">Advanced ▶</div>
     <div id="advanced-dropdown">
       <input type="text" id="extras">
     </div>
+
+    <div class="button" style="margin-top: 1vw;" onclick="if(!running) render()">Render</div>
   </div>
 </body>
