moved handlers to seperate file

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -82,5 +82,8 @@
     </div>
 
     <div class="button" style="margin-top: 1vw;" onclick="if(!running) render()">Render</div>
+
+
+    <div class='button' id='adjust-defaults'>Adjust Defaults</div>
   </div>
 </body>
