updated preview on default change

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -84,6 +84,6 @@
     <div class="button" style="margin-top: 1vw;" onclick="if(!running) render()">Render</div>
 
 
-    <div class='button' id='adjust-defaults' onclick="adjustDefaults()">Adjust Defaults</div>
+    <div class='button' id='adjust-defaults' onclick="showDefaultsMenu()">Adjust Defaults</div>
   </div>
 </body>
