Animate this button

--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -41,6 +41,10 @@
 
   <br />
   <div class="columns">
+    <div class="button" title="Open the 'Video Render' page with this file as the timestamps" style="margin-left: 2.1vw"
+      onclick="animateThis()">
+      Animate This
+    </div>
     <div class="button" title="Output timestamps to a file" style="margin-left: 2.1vw" onclick="saveTimestamps()">
       Save
     </div>
