added text render option

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -22,7 +22,7 @@
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
-                Audio File
+                Audio (Required)
               </span>
             </span>
             <span class="file-name" id='audio'>
@@ -36,7 +36,7 @@
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
-                Output File
+                Output (Required)
               </span>
             </span>
             <span class="file-name" id='output'>
@@ -50,7 +50,7 @@
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
-                Character File (optional)
+                Character
               </span>
             </span>
             <span class="file-name" id='character'>
@@ -64,10 +64,24 @@
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
-                Timestamps File (optional)
+                Timestamps
               </span>
             </span>
             <span class="file-name" id='timestamps'>
+            </span>
+          </label>
+        </div>
+      </div>
+
+      <div class="column">
+        <div id='file_path' class="file has-name" onclick="uploadPath('text') ">
+          <label class="file-label">
+            <span class="file-cta">
+              <span class="file-label">
+                Transcript
+              </span>
+            </span>
+            <span class="file-name" id='text'>
             </span>
           </label>
         </div>
