--- a/src/render/render.html
+++ b/src/render/render.html
@@ -19,7 +19,7 @@
 
       <div class="column">
         <div id='file_path' class="file has-name"
-          onclick="uploadPath('audio', {filters: {name: 'audio',extensions:['wav']}})">
+          onclick="uploadPath('audio', {filters: [{name: 'WAV File',extensions:['wav']}]})">
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
@@ -33,7 +33,8 @@
       </div>
 
       <div class="column">
-        <div id='file_path' class="file has-name" onclick="savePath('output') ">
+        <div id='file_path' class="file has-name"
+          onclick="savePath('output', {defaultPath: 'myAnimation.mov', filters: [{name: 'Video File',extensions:['mp4', 'mov']}]}) ">
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
@@ -47,7 +48,8 @@
       </div>
 
       <div class="column">
-        <div id='file_path' class="file has-name" onclick=" uploadPath('character')">
+        <div id='file_path' class="file has-name"
+          onclick=" uploadPath('character', {filters: [{name: 'Character File',extensions:['json']}]})">
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
@@ -61,7 +63,8 @@
       </div>
 
       <div class="column">
-        <div id='file_path' class="file has-name" onclick="uploadPath('timestamps') ">
+        <div id='file_path' class="file has-name"
+          onclick="uploadPath('timestamps', {filters: [{name: 'Timestamps File',extensions:['txt']}]}) ">
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
@@ -75,7 +78,8 @@
       </div>
 
       <div class="column">
-        <div id='file_path' class="file has-name" onclick="uploadPath('text') ">
+        <div id='file_path' class="file has-name"
+          onclick="uploadPath('text', {filters: [{name: 'Text Transcript',extensions:['txt']}]}) ">
           <label class="file-label">
             <span class="file-cta">
               <span class="file-label">
