Updated readme instructions

--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -32,7 +32,7 @@
     </div>
     <div class="column has-text-centered">
       <div class="button" title="Create a pose timestamp (a)"
-        onclick="(async ()=> {createMarker(await getPoseName())})()" title>Add Pose</div>
+        onclick="(async ()=> {createMarker(await getPoseName())})()" title>New Marker</div>
     </div>
     <div class="column">
       <div class="slidecontainer" title="Zoom in on the waveform">
