--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -1,38 +1,23 @@
+<!DOCTYPE html>
+<html lang="en" style="height: 100%;background: var(--mm-background);">
+
 <head>
-  <title>Matamata Desktop</title>
-
-  <link rel="stylesheet" href="../styles/bulma.min.css" />
-  <script src="../styles/bulma-slider.min.js"></script>
-  <link rel="stylesheet" href="../styles/main.css" />
-
-  <link rel="stylesheet" href="menu.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Matamata Desktop</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/Momcake.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-  <div class="has-text-centered">
-    <h1><b>Matamata</b> Desktop</h1>
-  </div>
-  <div class="has-text-centered"></div>
-  <div class="columns">
-    <div class="column has-text-centered">
-      <a href="../autoinstall/decider.html">
-        <div class="button">Install Requirements</div>
-      </a>
+    <h1 style="transform: perspective(0px);font-size: min(10vw, 150px);text-align: center;margin-top: 1vw;font-family: Momcake;color: rgb(248, 248, 242);"><strong>Matamata</strong> Desktop</h1>
+    <div class="row">
+        <div class="col-auto mx-auto"><a href="../autoinstall/decider.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Install Requirements</button></a><a href="../character-creator/cc.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Configure Character</button></a><a href="../timestamps/timestamps.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Create Timestamps</button></a><a href="../render/render.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Render Video</button></a></div>
     </div>
-    <div class="column has-text-centered">
-      <a href="../character-creator/cc.html">
-        <div class="button">Character Configuration</div>
-      </a>
-    </div>
-    <div class="column has-text-centered">
-      <a href="../timestamps/timestamps.html">
-        <div class="button">Timestamps Creator</div>
-      </a>
-    </div>
-    <div class="column has-text-centered">
-      <a href="../render/render.html">
-        <div class="button">Video Render</div>
-      </a>
-    </div>
-  </div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
+
+</html>
