--- a/src/autoinstall/linux.html
+++ b/src/autoinstall/linux.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Matamata Desktop</title>
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/css/Google-Style-Text-Input.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
@@ -16,12 +15,9 @@
 <body>
     <p id="commandText" style="text-align: center;margin: 1vw;">Command Text Here</p>
     <div class="row">
-        <div class="col" style="text-align: center;"><button class="btn btn-primary" id="installButton" type="button"
-                style="color: var(--mm-foreground);background: var(--mm-button-color);">Install</button></div>
-    </div>
-    <script>exports = {}</script>
-    <script src='linux.js'></script>
-    <script src="../assets/js/jquery.min.js"></script>
+        <div class="col" style="text-align: center;"><button class="btn btn-primary" id="installButton" type="button" style="color: var(--mm-foreground);background: var(--mm-button-color);">Install</button></div>
+    </div><script>exports = {} </script>
+<script src='linux.js'></script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
