--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/css/Google-Style-Text-Input.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/menu.css">
 </head>
 
 <body>
     <h1 style="transform: perspective(0px);font-size: min(10vw, 150px);text-align: center;margin-top: 1vw;font-family: Momcake;color: rgb(248, 248, 242);"><strong>Matamata</strong> Desktop</h1>
     <div class="row">
-        <div class="col-auto mx-auto"><a href="../autoinstall/decider.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Install Requirements</button></a><a href="../character-creator/cc.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Configure Character</button></a><a href="../timestamps/timestamps.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Create Timestamps</button></a><a href="../render/render.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Render Video</button></a></div>
+        <div class="col-auto mx-auto"><a class="menu-button" href="../autoinstall/decider.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Install Requirements</button></a><a class="menu-button" href="../character-creator/cc.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Configure Character</button></a><a class="menu-button" href="../timestamps/timestamps.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Create Timestamps</button></a><a class="menu-button" href="../render/render.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);" title="Easily install app dependancies">Render Video</button></a></div>
     </div>
-    <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
