--- a/src/render/render.html
+++ b/src/render/render.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/Google-Style-Text-Input.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/render.css">
+    <link rel="stylesheet" href="../assets/css/Simple-Slider.css">
 </head>
 
 <body>
