fixed swal input box offset

--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/css/Google-Style-Text-Input.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/cc.css">
     <link rel="stylesheet" href="../assets/css/render.css">
-    <link rel="stylesheet" href="../assets/css/Simple-Slider.css">
 </head>
 
 <body>
