--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
-    <link rel="stylesheet" href="../assets/css/Google-Style-Text-Input.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/render.css">
-    <link rel="stylesheet" href="../assets/css/Simple-Slider.css">
     <link rel="stylesheet" href="../assets/css/timestamps.css">
 </head>
 
@@ -44,7 +42,7 @@
         $("#drop_zone").on("drop", dropHandler);
         $("#drop_zone").on("dragover", (e)=> e.preventDefault());
 
-        $("#addPose").on("drop", async ()=> {createMarker(await getPoseName())});
+        $("#addPose").on("click", async ()=> {createMarker(await getPoseName())});
 
         $("#animateThis").on("click", animateThis);
         
