--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -26,14 +26,14 @@
         </div>
         <div class="col">
             <div style="display: flex;align-items: center;justify-content: center;">
-                <p><button class="btn btn-primary" id="addPose" type="button" style="color: var(--mm-foreground);background: var(--mm-button-color);">Add Pose</button></p>
+                <p><button class="btn btn-primary" id="addPose" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);">Add Pose</button></p>
             </div>
         </div>
         <div class="col"><input class="form-range" type="range" id="audioZoom" min="20" max="1000" value="20" style="width: 10vw;position: absolute;right: 1vw;"></div>
     </div>
     <div class="row" style="width: max(400px, 30vw);">
-        <div class="col"><button class="btn btn-primary" id="animateThis" type="button" style="margin-left: 1vw;color: var(--mm-foreground);background: var(--mm-button-color);">Animate This</button></div>
-        <div class="col"><button class="btn btn-primary" id="saveThis" type="button" style="margin-left: 1vw;color: var(--mm-foreground);background: var(--mm-button-color);">Save</button></div>
+        <div class="col"><button class="btn btn-primary" id="animateThis" type="button" style="margin-left: 1vw;color: var(--mm-button-color);background: var(--mm-button-background);">Animate This</button></div>
+        <div class="col"><button class="btn btn-primary" id="saveThis" type="button" style="margin-left: 1vw;color: var(--mm-button-color);background: var(--mm-button-background);">Save</button></div>
     </div>    <script>exports={}</script>
     <script src='audioBox.js'></script>
     <script defer>
