--- a/src/autoinstall/linux.html
+++ b/src/autoinstall/linux.html
@@ -15,7 +15,7 @@
 <body>
     <p id="commandText" style="text-align: center;margin: 1vw;">Command Text Here</p>
     <div class="row">
-        <div class="col" style="text-align: center;"><button class="btn btn-primary" id="installButton" type="button" style="color: var(--mm-foreground);background: var(--mm-button-color);">Install</button></div>
+        <div class="col" style="text-align: center;"><button class="btn btn-primary" id="installButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);">Install</button></div>
     </div><script>exports = {} </script>
 <script src='linux.js'></script>
     <script src="../assets/js/jquery.min.js"></script>
