--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -16,20 +16,20 @@
     <div class="row">
         <div class="col" style="text-align: center;">
             <p><strong>Go down the list of buttons, wait for a success popup before continuing.</strong><br></p>
-            <div class="container"><button class="btn btn-primary" id="uninstallPy" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Remove Default Python Installation</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installPython" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Install Python</button></div>
+            <div class="container"><button class="btn btn-primary" id="uninstallPy" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Remove Default Python Installation</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installPython" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Install Python</button></div>
             <p>Restart this app<br></p>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installPackages" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Install Python Packages</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="enableWSL" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Enable WSL</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installPackages" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Install Python Packages</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="enableWSL" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Enable WSL</button></div>
             <p>Restart /Update your computer&nbsp;<br></p>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installKernal" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Install WSL Kernal</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="setWSL2" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">WSL Mode 2</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installDocker" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Install Docker (This may take a while)</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installKernal" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Install WSL Kernal</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="setWSL2" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">WSL Mode 2</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="installDocker" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Install Docker (This may take a while)</button></div>
             <p>Restart your computer<br></p>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="dockerPull" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Pull Docker Container</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="rmFFmpeg" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Delete Old FFmpeg</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="downloadFFmpeg" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Download FFmpeg</button></div>
-            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="pathFFmpeg" type="button" style="background: var(--mm-button-color);color: var(--mm-foreground);">Add FFmpeg to Path</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="dockerPull" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Pull Docker Container</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="rmFFmpeg" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Delete Old FFmpeg</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="downloadFFmpeg" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Download FFmpeg</button></div>
+            <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="pathFFmpeg" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Add FFmpeg to Path</button></div>
         </div>
     </div>    <script>exports={}</script>
     <script src='windows.js'></script>
