Added solarized themes

--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1 style="transform: perspective(0px);font-size: min(10vw, 150px);text-align: center;margin-top: 1vw;font-family: Momcake;color: var(--mm-foreground);"><strong>Matamata</strong> Desktop</h1>
+    <h1 style="transform: perspective(0px);font-size: min(10vw, 150px);text-align: center;margin-top: 1vw;font-family: Momcake;color: var(--mm-title-color);"><strong>Matamata</strong> Desktop</h1>
     <div class="row">
         <div class="col-auto mx-auto"><a class="menu-button" href="../autoinstall/decider.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Install Requirements</button></a><a class="menu-button" href="../character-creator/cc.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Configure Character</button></a><a class="menu-button" href="../timestamps/timestamps.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Create Timestamps</button></a><a class="menu-button" href="../render/render.html"><button class="btn btn-primary" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);" title="Easily install app dependancies">Render Video</button></a></div>
     </div><i class="fas fa-paint-roller" id="theme-button" style="color: var(--mm-button-background);font-size: 34px;position: fixed;left: 1vw;bottom: 1vw;"></i><script>exports={}</script>
