--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -17,7 +17,7 @@
 <body style="background: var(--mm-background);">
     <div id="drop_zone" style="background: var(--mm-selection);">
         <div id="dragHelpText-container">
-            <p id="dragHelpText">Drag your audio here</p>
+            <p id="dragHelpText" style="color: var(--mm-foreground);">Drag your audio here</p>
         </div>
         <div id="waveform"></div>
     </div>
